# desktop-env

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
custom_plugin/python/: utctimestampsrc.py
examples/: recorder.py
examples/recorder/: README.md  main.py
examples/typing_agent/: .env.example  InternVL_Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml  utils.py  ztype_agent_native_win.py  ztype_agent_wsl_docker.py
scripts/: args.yaml  desktop_args.yaml  enc_test.md  full_pipeline.py  macos_get_window_names.py  main.py  minimal_example.py  probe_with_timestamp.py  rtp.md  windows_spy.py
scripts/benchmark/: mss_mss.py  pillow_imagegrab.py  pyautogui_screenshot.py  pyscreenshot.py
src/desktop_env/: __init__.py  actor.py  args.py  desktop.py  desktop_args.py  msg.py  threading.py  utils.py
src/desktop_env/control_publisher/: __init__.py  args.py  callback_factory.py  msg.py  utils.py
src/desktop_env/platform_specific/: __init__.py
src/desktop_env/platform_specific/macos/: __init__.py  capture.py  control.py  window.py
src/desktop_env/platform_specific/windows/: args.py
src/desktop_env/recorder/: __init__.py  args.py  gst_pipeline.py  recorder.py
src/desktop_env/utils/: __init__.py
src/desktop_env/window_publisher/: __init__.py  args.py  utils.py
src/desktop_env/windows_capture/: __init__.py  gst_pipeline.py  msg.py  windows_capture.py
